<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Checkers</string>
    <string name="select_difficulty">Select Difficulty</string>
    <string name="difficulty_beginner">Beginner</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_medium">Medium</string>
    <string name="difficulty_hard">Hard</string>
    <string name="difficulty_expert">Expert</string>
    <string name="play">Play</string>
    <string name="new_game">New Game</string>
    <string name="ai_thinking">AI thinking…</string>
    <string name="your_turn">Your turn (Red)</string>
</resources>
